--- a/src/Styles/app.scss
+++ b/src/Styles/app.scss
@@ -1,51 +1,64 @@
 @import './colors';
 
 * {
-  margin: 0;
-  padding: 0;
+  margin    : 0;
+  padding   : 0;
   box-sizing: border-box;
 }
 
 a {
   text-decoration: none;
-  color: $mediumGray;
-  font-weight: 400;
+  color          : $mediumGray;
+  font-weight    : 400;
+
   &:hover {
     text-decoration: none;
-    color: $darkGray;
+    color          : $darkGray;
   }
 }
 
 body {
   background-color: #fff;
+  width           : 100%;
+  overflow-y      : hidden;
 }
 
 img {
-  max-width: 100%;
+  max-width : 100%;
   object-fit: scale-down;
 }
+
 .containers {
   max-width: 1250px;
-  margin: 0 auto;
+  margin   : 0 auto;
 }
+
 .container {
-  max-width: 1200px;
-  margin: 0 auto;
-  display: grid;
-  grid-gap: 1em;
+  max-width            : 1200px;
+  margin               : 0 auto;
+  display              : grid;
+  grid-gap             : 1em;
   grid-template-columns: repeat(auto-fit, minmax(140px, 1fr));
-  padding: 1.5em;
+  padding              : 1.5em;
 }
+
 header {
-  height: 15vh;
+  height          : auto;
   background-color: #fff;
 }
+
 .main {
-  margin: 0 auto;
-  display: grid;
-  height: 85vh;
+  margin  : 0 auto;
+  display : grid;
+  height  : 100vh;
   overflow: hidden;
+
+  ::-webkit-scrollbar {
+    display: none;
+  }
+
   grid-template-columns: 280px 1fr;
+
   @media (max-width: 768px) {
     grid-template-columns: 1fr;
   }
@@ -53,23 +66,30 @@ header {
 
 .sidebar {
   background-color: $lightGray;
-  padding: 2em;
-  position: relative;
+  padding         : 2em;
+  position        : relative;
+  height          : 100vh;
+  overflow-y      : hidden;
+
   @media (max-width: 768px) {
     display: none;
   }
 }
+
 .main-container {
   max-height: 100%;
   overflow-y: scroll;
+
   &::-webkit-scrollbar {
     display: none;
   }
 
   /* Hide scrollbar for IE, Edge and Firefox */
 
-  -ms-overflow-style: none; /* IE and Edge */
-  scrollbar-width: none; /* Firefox */
+  -ms-overflow-style: none;
+  /* IE and Edge */
+  scrollbar-width   : none;
+  /* Firefox */
 }
 
 h3 {
@@ -78,34 +98,39 @@ h3 {
 
 .navigator {
   text-transform: uppercase;
-  padding-left: 1.5em;
+  padding-left  : 1.5em;
+
   h3 {
     font-size: 16px;
   }
 }
 
 .product_list {
-  padding: 1.5em;
-  display: grid;
+  padding              : 1.5em;
+  display              : grid;
   grid-template-columns: repeat(auto-fit, minmax(160px, 1fr));
-  grid-gap: 1em;
+  grid-gap             : 1em;
 }
+
 .product_item {
-  border: 1px solid lightgray;
-  display: grid;
+  border            : 1px solid lightgray;
+  display           : grid;
   grid-template-rows: 120px 50px 25px 30px;
-  padding: 0.5em;
-  grid-gap: 0.5em;
-  text-align: center;
+  padding           : 0.5em;
+  grid-gap          : 0.5em;
+  text-align        : center;
+
   img {
     max-height: 100%;
-    margin: 0 auto;
+    margin    : 0 auto;
   }
+
   p {
-    margin: 0;
+    margin     : 0;
     line-height: 18px;
   }
 }
+
 // section {
 //   padding: 1.5em;
 // }
